--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -1,4 +1,57 @@
-.top-container, .nav-right{
+.nav-right {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.nav-right button {
+    margin: 5px;
+}
+
+.top-container {
+    padding: 5px;
+    background-color: #48d1cc;
+    /* border: 1px solid black; */
     display: flex;
     justify-content: space-around;
+}
+
+
+/* < !-- HTML !--><button class="button-89"role="button">Button 89</button> */
+
+/* CSS */
+.button-89 {
+    --b: 3px;
+    /* border thickness */
+    --s: .45em;
+    /* size of the corner */
+    --color: #373B44;
+
+    padding: calc(.5em + var(--s)) calc(.9em + var(--s));
+    color: var(--color);
+    --_p: var(--s);
+    background:
+        conic-gradient(from 90deg at var(--b) var(--b), #0000 90deg, var(--color) 0) var(--_p) var(--_p)/calc(100% - var(--b) - 2*var(--_p)) calc(100% - var(--b) - 2*var(--_p));
+    transition: .3s linear, color 0s, background-color 0s;
+    outline: var(--b) solid #0000;
+    outline-offset: .6em;
+    font-size: 16px;
+
+    border: 0;
+
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.button-89:hover,
+.button-89:focus-visible {
+    --_p: 0px;
+    outline-color: var(--color);
+    outline-offset: .05em;
+}
+
+.button-89:active {
+    background: var(--color);
+    color: #fff;
 }
