--- a/client/src/components/newDog.css
+++ b/client/src/components/newDog.css
@@ -1,3 +1,29 @@
+.form-header{
+    background-image: url('../images/dog-field.jpeg');
+    background-size: cover;
+    background-position: center;
+    background-position: right 40% bottom 45%;
+    padding: 40px;
+}
+
+.grats{
+    color: white;
+}
+
+.grats span{
+    background-color: #dbd8e3;
+}
+
+
+.form-bg{
+    background-image: url('../images/looking-up.jpeg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    font-weight: bold;
+}
+
+
 .top-form {
     display: flex;
     justify-content: center;
@@ -7,6 +33,8 @@
     display: grid;
     justify-content: center;
 }
+
+
 
 .errors {
     color: red;
